[package]
name = "contactor-control"
version = "0.1.0"
authors = ["Nobody_Nowhere <63668759+rand12345@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.61"

[features]
default = ["std", "alloc", "esp-idf-sys"]
std = ["alloc", "esp-idf-sys/std", "edge-executor?/std"]
alloc = []
critical-section-interrupt = ["critical-section"]
critical-section-mutex = ["critical-section"]
riscv-ulp-hal = []
embassy-time-timer00 = ["embassy-time"]
embassy-time-timer01 = ["embassy-time"]
embassy-time-timer10 = ["embassy-time"]
embassy-time-timer11 = ["embassy-time"]
embassy-time-driver = ["embassy-time"]

[dependencies]
nb = "0.1.2"
embedded-hal = "=1.0.0-alpha.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
esp-idf-sys = { version = "0.31.9", optional = true, default-features = false, features = ["native", "binstart"] }
critical-section = { version = "1.1", optional = true }
embassy-sync = { version = "0.1", optional = true, git = "https://github.com/ivmarkov/embassy" }
embassy-time = { version = "0.1", optional = true, features = ["tick-hz-1_000_000"], git = "https://github.com/ivmarkov/embassy" }
edge-executor = { version = "0.2", optional = true, default-features = false }
anyhow = "1"
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }

[build-dependencies]
embuild = "0.30.3"
anyhow = "1"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.31.9", features = ["native", "binstart"] }