[package]
name = "contactor-control"
version = "0.1.1"
authors = ["Nobody_Nowhere <63668759+rand12345@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.61"

[features]
default = ["esp-idf-sys/std"]
# std = ["esp-idf-sys/std"]

[dependencies]
nb = "1.0.0"
embedded-hal = "=1.0.0-alpha.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
esp-idf-sys = { version = "0.31.9", optional = true, default-features = false, features = ["native", "binstart"] }
anyhow = "1"
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }

[build-dependencies]

embuild = "0.30.3"
anyhow = "1"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.31.9", features = ["native", "binstart"] }